Added Article Detail Activity Articles and Activities Adapters Enhancements TabLayout Enhancements Room Persistance(In-progress)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,9 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
-            app:tabTextColor="@color/colorWhite"
+            app:tabIndicatorColor="@color/colorWhite"
+            app:tabSelectedTextColor="@color/colorWhite"
+            app:tabTextColor="@color/colorLightGray"
             app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
