--- a/app/src/main/res/layout/activities_list_row.xml
+++ b/app/src/main/res/layout/activities_list_row.xml
@@ -5,7 +5,7 @@
     android:paddingBottom="8dp"
     android:paddingTop="8dp">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/activity_item_thumbnail"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
