Added Offline persistence for Article Details Added Filter Spinner Full offline persistence, and updating if network is available Added Article Details DAO Added Room TypeConverters

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,8 @@
         android:textColor="@color/colorWhite"
         android:layout_centerHorizontal="true"/>
     <Spinner
+        style="@style/Widget.AppCompat.Spinner.Underlined"
+        android:backgroundTint="@color/colorWhite"
         android:id="@+id/ageSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
